--- a/2023/CMakeLists.txt
+++ b/2023/CMakeLists.txt
@@ -1,3 +1,4 @@
 cmake_minimum_required(VERSION 3.20)
 project(AdventOfCode-2023)
-add_subdirectory(day_01)
+add_subdirectory(day1)
+add_subdirectory(day2)
