--- a/2023/CMakeLists.txt
+++ b/2023/CMakeLists.txt
@@ -2,3 +2,4 @@ cmake_minimum_required(VERSION 3.20)
 project(AdventOfCode-2023)
 add_subdirectory(day1)
 add_subdirectory(day2)
+add_subdirectory(day3)
